--- a/packages/@coorpacademy-components/src/template/common/dashboard/style.css
+++ b/packages/@coorpacademy-components/src/template/common/dashboard/style.css
@@ -1,3 +1,14 @@
+@value breakpoints: "../../../variables/breakpoints.css";
+@value desktop from breakpoints;
+@value tablet from breakpoints;
+@value mobile from breakpoints;
+
 .wrapper {
   width: 100%;
+}
+
+@media desktop {
+  .section {
+    margin-bottom: 20px;
+  }
 }
